infrastructure/03-traefik/foreign/home-assistant/home-assistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-service
spec:
  type: ExternalName
  externalName: 192.168.178.3
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
