infrastructure/03-traefik/foreign/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: traefik
spec:
  type: ExternalName
  externalName: 192.168.178.3
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
