infrastructure/03-traefik/foreign/home-assistant/home-assistant-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assitant
  namespace: external
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`home.steffenillium.de`)
    kind: Rule
    services:
    - name: home-assitant
      port: 80
