infrastructure/03-traefik/foreign/home-assistant/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: traefik
spec:
  entryPoints:
    - websecure-front
    - websecure-local
  routes:
  - match: Host(`home.steffenillium.de`)
    kind: Rule
    tls: {}
    services:
    - name: home-assistant
      port: http
